[gd_scene load_steps=17 format=2]

[ext_resource path="res://sounds/GunNoises/RevolverShoot.mp3" type="AudioStream" id=1]
[ext_resource path="res://sprites/pistolsprite.png" type="Texture" id=2]
[ext_resource path="res://scripts/GunHandler.gd" type="Script" id=3]
[ext_resource path="res://sprites/pistolItemNew.png" type="Texture" id=4]
[ext_resource path="res://sprites/pewpew.png" type="Texture" id=5]
[ext_resource path="res://sprites/pistolIconNew.png" type="Texture" id=6]
[ext_resource path="res://sprites/pistolItemNewUYNDER.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 1
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "NewRecoil"
tracks/0/type = "value"
tracks/0/path = NodePath("Under/WeaponSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Vector2( -5, 0.5 ), Vector2( 2, 0.5 ), Vector2( 0, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Under/WeaponSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.125 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Under/Flash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.025, 0.5 ),
"transitions": PoolRealArray( -2, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Under/Flash:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.025, 0.5 ),
"transitions": PoolRealArray( -2, 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Under/Flash:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Under/Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Under/Flash:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Under/Flash:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Recoil"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.95, 1.05 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( -0.5, 0 ), Vector2( 0.5, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "ShootAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("Under/Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Under:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( -2, 0.5 ), Vector2( 2, 0.5 ), Vector2( 0, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Under/WeaponSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( -4, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Inspect"
length = 5.5
tracks/0/type = "value"
tracks/0/path = NodePath("Under/WeaponSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 4.6, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Under/WeaponSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 3, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.5 ), Vector2( 5, 0.5 ), Vector2( 5, 0.5 ), Vector2( 5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Under/WeaponSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.6, 3, 3.6, 3.9, 4.6, 5.1, 5.5 ),
"transitions": PoolRealArray( -0.5, 0.5, -2, 1, -2, -2, 1, -2, -2, -2 ),
"update": 0,
"values": [ 0.0, 60.5, 66.6, 60.5, 60.5, -60.5, -48.4, -48.4, 18.2, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Under/WeaponSprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 3, 3.3, 3.5, 4.6, 4.9, 5.1 ),
"transitions": PoolRealArray( -2, -2, -2, -2, -2, -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ), Vector2( 1, 0 ), Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Under/WeaponSprite:flip_v")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 3.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Under/WeaponSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Under/WeaponSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Under/WeaponSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Under/WeaponSprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Under/WeaponSprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Under/WeaponSprite:flip_v")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Pistol" type="Node2D"]
script = ExtResource( 3 )
gun_id = 0
damage = 8.0
cooldown_time = 0.1
recoil_amount = 8.0
auto_shoot = false
slot = 1
UI_sprite = "res://sprites/pistolIconNew.png"

[node name="Grass" type="ColorRect" parent="."]
visible = false
margin_left = -4.0
margin_top = -33.0
margin_right = 75.0
margin_bottom = 38.0
color = Color( 0.407843, 0.756863, 0.521569, 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="GunShoot" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 27, 0 )
stream = ExtResource( 1 )
volume_db = -8.0

[node name="GunSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, 0.5 )
frames = SubResource( 3 )
offset = Vector2( 30, 0 )

[node name="Under" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 0, 0.5 )
texture = ExtResource( 7 )
offset = Vector2( 22, 0 )

[node name="WeaponSprite" type="Sprite" parent="Under"]
position = Vector2( 0, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 22, 0 )

[node name="Flash" type="Light2D" parent="Under"]
visible = false
position = Vector2( 36, -0.5 )
texture = ExtResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( 15, 0 )
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 1000 )
collide_with_areas = true

[node name="Recoil" type="AnimationPlayer" parent="."]
anims/NewRecoil = SubResource( 6 )
anims/RESET = SubResource( 4 )
anims/Recoil = SubResource( 5 )
anims/ShootAnimation = SubResource( 21 )

[node name="Inspect" type="AnimationPlayer" parent="."]
anims/Inspect = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="ProjectilePosition" type="Node2D" parent="."]
position = Vector2( 26, 0 )

[node name="CasingPosition" type="Node2D" parent="."]
position = Vector2( 19, 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
